manifests/shopping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-game
  template:
    metadata:
      labels:
        app: shopping-game
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: shopping-game
          image: ghcr.io/kallangerard/shopping-game:main
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: shopping-game-data
