manifests/shopping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-game
spec:
  selector:
    app: shopping-game
  ports:
    - port: 80
      targetPort: 8000
