manifests/shopping/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shopping-game
spec:
  hostnames:
    - shopping.operationloungechair.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: shopping-game
          port: 80
