manifests/shopping/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-game
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shopping.operationloungechair.com
      secretName: shopping-game-tls
  rules:
    - host: shopping.operationloungechair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-game
                port:
                  name: http
